<resources>
    <string name="app_name">WeatherApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Map_API_KEY" translatable="false">AIzaSyBGI2WXOfhW1SUamL5p6tGL1CgcgwrWNFc</string>

    <string name="home">Home</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind Speed</string>
    <string name="cloud">Clouds</string>
    <string name="uv">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="fav">Favourites</string>
    <string name="alert">Alerts</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="ok">OK</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save">Save</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="dismiss">Dismiss</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>

    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string name="hpa"> hpa</string>
    <string name="m_s">m/s</string>
    <string name="m_h">mile/hr</string>
    <string name="c">C ْ°</string>
    <string name="f">F ْ°</string>
    <string name="k">K ْ°</string>

    <string name="units">Units</string>
    <string name="c_with_wind_speed_m_sec">C° with wind speed m/sec</string>
    <string name="f_with_wind_speed_mile_hr">F° with wind speed mile/hr</string>
    <string name="k_with_wind_speed_m_sec">K° with wind speed m/sec</string>

    <string name="hourly">%1$d %2$s</string>
    <string name="daily">%1$d / %2$d %3$s</string>
    <string name="no_favorites_found">No Favorites Founded</string>
    <string name="no_alerts_found">No Alerts Founded</string>
    <string name="no_connection">Please, check your connection and try again</string>
    <string name="ask_permission">Location permission denied. Some functionality may be restricted</string>
    <string name="permission_postive_button">Grant</string>

    <string name="temp_deg">%1$d %2$s</string>
    <string name="pressure_deg">%1$d %2$s</string>
    <string name="wind_deg">%1$d %2$s</string>
    <string name="humidity_deg">%1$d %2$s</string>
    <string name="cloud_deg">%1$d %2$s</string>
    <string name="uv_deg">%1$d %2$s</string>
    <string name="visibility_deg">%1$d %2$s</string>

    <string name="delete_alert">Alert</string>
    <string name="delete_message">Are you sure you want to delete this item ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="swipe_delete">Item Deleted</string>
    <string name="undo">Undo</string>

    <string name="alert_permission_message">Need Your Permission to set alarms</string>

    <string name="valid_date">Please, Enter valid date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
</resources>