<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:elevation="4dp"
    android:layoutDirection="locale"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_2">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/alarm"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_to_date"
            app:layout_constraintEnd_toStartOf="@+id/tv_to_date"
            app:layout_constraintStart_toEndOf="@+id/tv_from_date"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <TextView
            android:id="@+id/date_from"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/bg_tv_dialog"
            android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
            android:drawableTint="@color/bg_2"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="dd_mm_yy"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/date_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_to"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_tv_dialog"
            android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
            android:drawableTint="@color/bg_2"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="dd_mm_yy"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hour_from"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/bg_tv_dialog"
            android:drawableEnd="@drawable/ic_baseline_access_alarm_24"
            android:drawableTint="@color/bg_2"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="00:00"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/hour_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_from_hour" />

        <TextView
            android:id="@+id/hour_to"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_tv_dialog"
            android:drawableEnd="@drawable/ic_baseline_access_alarm_24"
            android:drawableTint="@color/bg_2"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="00:00"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_to" />

        <TextView
            android:id="@+id/tv_from_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/date_from"
            app:layout_constraintStart_toStartOf="@+id/date_from"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/date_to"
            app:layout_constraintStart_toStartOf="@+id/date_to"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_from_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/hour_from"
            app:layout_constraintStart_toStartOf="@+id/hour_from"
            app:layout_constraintTop_toBottomOf="@+id/date_from" />

        <TextView
            android:id="@+id/tv_to_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/hour_to"
            app:layout_constraintStart_toStartOf="@+id/hour_to"
            app:layout_constraintTop_toBottomOf="@+id/date_to" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>